--- a/style.css
+++ b/style.css
@@ -5,31 +5,26 @@
     font-size: 16px;
     user-select: none;
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 html, body {
     margin: 0;
+    width: 100%;
     height: 100%;
     transform: translateY(0%);
+    display: flex;
+    flex-wrap: wrap;
+    scroll-snap-type: y mandatory;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 section {
-    position: absolute;
     width: 100%;
     height: 100%;
-}
-
-section:nth-child(2) {
-    transform: translateY(100%);
-}
-
-section:nth-child(3) {
-    transform: translateY(200%);
-}
-
-section:nth-child(4) {
-    transform: translateY(300%);
+    scroll-snap-align: start;
 }
 
 header {
@@ -257,22 +252,14 @@ section:nth-child(3) {
     img:hover {
         transform: rotate(360deg);
     }
-
-    footer {
-        left: 0;
-        right: 50px;
-        justify-content: end;
-    }
 }
 
 footer {
-    position: absolute;
-    left: 50px;
-    bottom: 0;
-    height: 120px;
+    position: relative;
+    bottom: 75px;
     color: aliceblue;
     display: flex;
-    align-items: center;
+    justify-content: center;
     font-size: 1.1rem;
 }
 
