--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@
     background-color: rgb(15, 15, 15);
 }
 
-html, body, #sectionContainer {
+html, body, #sectionBox {
     margin: 0;
     width: 100%;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
     transition: 1s;
+    scale: 1;
 }
 
 section {
@@ -213,6 +214,7 @@ footer {
 }
 
 i {
+    top: calc(100vh * (var(--section-index, 1) - 1) + 50px);
     left: 50px;
     font-size: 2rem;
     opacity: 0.75;
@@ -220,23 +222,24 @@ i {
 }
 
 b {
+    top: calc(100vh * (var(--section-index, 1) - 1));
     right: 50px;
     font-size: 10rem;
-    opacity: 0.75;
+    z-index: 1;
+}  
+
+.carousel-item {
+    width: 70%;
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
 }
 
 section:nth-child(2) {
     display: flex;
     flex-direction: row;
     color: aliceblue;
-}
-
-section:nth-child(2) div {
-    width: 70%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 section:nth-child(2) p {
@@ -281,14 +284,6 @@ h2 {
 
 .navigation:active {
     scale: 0.9;
-}
-
-i {
-    top: calc(100vh * (var(--section-index, 1) - 1) + 50px);
-}
-
-b {
-    top: calc(100vh * (var(--section-index, 1) - 1));
 }
 
 section:nth-child(2) { --section-index: 2; }
