--- a/style.css
+++ b/style.css
@@ -229,11 +229,20 @@ b {
 }  
 
 .carousel-item {
+    display: none;
     width: 70%;
     height: 100%;
-    display: none;
     flex-direction: column;
     justify-content: center;
+}
+
+.carousel-img {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.5s;
 }
 
 section:nth-child(2) {
@@ -249,15 +258,11 @@ section:nth-child(2) p {
 }
 
 section:nth-child(2) span {
+    position: relative;
     width: 30%;
 }
 
-section:nth-child(2) span img {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+
 
 h2 {
     font-size: 3rem;
