--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body, #sectionBox {
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    transition: 1s;
+    transition: 0.75s;
     scale: 1;
 }
 
@@ -225,8 +225,8 @@ b {
     top: calc(100vh * (var(--section-index, 1) - 1));
     right: 50px;
     font-size: 10rem;
-    z-index: 1;
-}  
+    z-index: 3;
+}
 
 .carousel-item {
     display: none;
@@ -237,12 +237,19 @@ b {
 }
 
 .carousel-img {
-    display: none;
+    display: flex;
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    top: -100%;
+    opacity: 0;
     transition: 0.5s;
+}
+
+.carousel-img.img-slide-down {
+    top: 0%;
+    opacity: 1;
 }
 
 section:nth-child(2) {
@@ -260,9 +267,8 @@ section:nth-child(2) p {
 section:nth-child(2) span {
     position: relative;
     width: 30%;
+    overflow: hidden;
 }
-
-
 
 h2 {
     font-size: 3rem;
