--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ b {
     top: calc(100vh * (var(--section-index, 1) - 1));
     right: 50px;
     font-size: 10rem;
+    text-shadow: 5px 5px 5px darkslategrey;
     z-index: 3;
 }
 
@@ -242,14 +243,12 @@ b {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    top: -100%;
-    opacity: 0;
-    transition: 0.5s;
+    top: -250%;
+    transition: 0.75s;
 }
 
 .carousel-img.img-slide-down {
     top: 0%;
-    opacity: 1;
 }
 
 section:nth-child(2) {
