--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
     }
 }
 
+* {
+    box-sizing: border-box;
+}
+
 html, body, #sectionBox {
     margin: 0;
     width: 100%;
@@ -42,16 +46,40 @@ html, body, #sectionBox {
 }
 
 section {
-    --section-index: 0;
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 100%;
     background-color: rgb(30, 60, 90);
+    color: aliceblue;
     z-index: -2;
+}
+
+section:nth-child(1) {
+    --section-index: 0;
+    display: block;
+}
+
+section:nth-child(2) {
+    --section-index: 1;
+}
+
+section:nth-child(3) {
+    --section-index: 2;
+    align-items: center;
+    background-color: rgb(20, 50, 80);
+}
+
+section:nth-child(4) {
+    --section-index: 3;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(10, 40, 70);
 }
 
 header {
     position: absolute;
-    text-shadow: 0.3rem 0.3rem 0.3rem rgb(30, 60, 90);
+    text-shadow: 0.3rem 0.3rem 0.3rem rgba(0, 0, 0, 0.5);
 }
 
 ul {
@@ -87,8 +115,7 @@ main {
     justify-content: center;
     flex-direction: column;
     height: 100%;
-    color: aliceblue;
-    text-shadow: 0.3rem 0.3rem 0.3rem rgb(30, 60, 90);
+    text-shadow: 0.3rem 0.3rem 0.3rem rgba(0, 0, 0, 0.5);
 }
 
 video {
@@ -119,7 +146,7 @@ hr {
     width: 0;
     height: 0.2rem;
     background-color: aliceblue;
-    box-shadow: 0.3rem 0.3rem 0.3rem rgb(30, 60, 90);
+    box-shadow: 0.3rem 0.3rem 0.3rem rgba(0, 0, 0, 0.5);
     animation: widen 3s forwards;
     border: none;
 }
@@ -161,14 +188,13 @@ main p {
 
 footer, i, b {
     position: absolute;
-    color: aliceblue;
-    
 }
 
 footer {
     left: 3rem;
     bottom: 2rem;
     font-size: 1.3rem;
+    text-shadow: 0.3rem 0.3rem 0.3rem rgba(0, 0, 0, 0.5);
 }
 
 i {
@@ -182,15 +208,8 @@ b {
     top: calc(100vh * var(--section-index));
     right: 3rem;
     font-size: 10rem;
-    text-shadow: 0.3rem 0.3rem 0.3rem rgb(30, 60, 90);
+    text-shadow: 0.3rem 0.3rem 0.3rem rgba(0, 0, 0, 0.5);
     z-index: 5;
-}
-
-section:nth-child(2) {
-    --section-index: 1;
-    display: flex;
-    flex-direction: row;
-    color: aliceblue;
 }
 
 .carousel {
@@ -300,19 +319,10 @@ section:nth-child(2) {
     scale: 0.95;
 }
 
-section:nth-child(3) {
-    --section-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(20, 50, 80);
-}
-
 table {
     width: 70%;
     margin-top: 6rem;
     border-collapse: collapse;
-    color: aliceblue;
     font-size: 1.3rem;
     text-align: center;
 }
@@ -362,7 +372,58 @@ th, td {
     transition: 0.25s;
 }
 
-section:nth-child(4) {
-    --section-index: 3;
-    background-color: rgb(10, 40, 70);
+h2 {
+    font-size: 3rem;
+}
+
+form {
+    width: 55rem;
+    background-color: aliceblue;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 3rem;
+    border-radius: 1rem;
+}
+
+form * {
+    width: 100%;
+}
+
+.short {
+    width: 48%;
+}
+
+label {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: rgb(10, 40, 70);
+}
+
+input, select {
+    font-size: 1.3rem;
+    height: 2.6rem;
+    padding: 0.5rem;
+    margin: 1rem 0 2rem 0;
+}
+
+input[type=submit] {
+    width: 75%;
+    height: 3.9rem;
+    font-size: 1.5rem;
+    margin: 1rem 0 0 12.5%;
+    color: rgb(10, 40, 70);
+    background-color: rgb(100, 255, 150);
+    border-radius: 1rem;
+    border: 0.2rem solid rgb(10, 40, 70);
+    transition: 0.25s;
+}
+
+input[type=submit]:hover {
+    scale: 1.1;
+}
+
+input[type=submit]:active {
+    transition: 0.1s;
+    scale: 0.95;
 }
