--- a/style.css
+++ b/style.css
@@ -378,12 +378,10 @@ h2 {
 
 form {
     width: 55rem;
-    background-color: aliceblue;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 3rem;
-    border-radius: 1rem;
 }
 
 form * {
@@ -397,7 +395,7 @@ form * {
 label {
     font-size: 1.5rem;
     font-weight: bold;
-    color: rgb(10, 40, 70);
+    color: aliceblue;
 }
 
 input, select {
@@ -405,6 +403,7 @@ input, select {
     height: 2.6rem;
     padding: 0.5rem;
     margin: 1rem 0 2rem 0;
+    border: none;
 }
 
 input[type=submit] {
@@ -412,10 +411,9 @@ input[type=submit] {
     height: 3.9rem;
     font-size: 1.5rem;
     margin: 1rem 0 0 12.5%;
-    color: rgb(10, 40, 70);
-    background-color: rgb(100, 255, 150);
+    color: aliceblue;
+    background-color: rgb(0, 175, 125);
     border-radius: 1rem;
-    border: 0.2rem solid rgb(10, 40, 70);
     transition: 0.25s;
 }
 
